# usg-est-client

./: .dockerignore  .gitignore  .gitlab-ci.yml  BUILDING-CI-IMAGE.md  CHANGELOG.md  CI-CD-IMPROVEMENTS-SUMMARY.md  CI-MIGRATION-GUIDE.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  DOCS-DEPLOYMENT-COMPARISON.md  Dockerfile.ci  Dockerfile.release  GITLAB-CI.md  README.md  RELEASING.md  ROADMAP.md  SAST-INTEGRATION.md  SECURITY-TOOLS.md  SECURITY.md  TODO-TRACKER.md  deny.toml  report.md  test-unwrap-tracking.sh  verify-gitlab-templates.sh
.cargo/: config.toml
.github/: CODEOWNERS  SECURITY.md  SECURITY_ADVISORY_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml  security-audit.yml  unwrap-tracking.yml
.gitlab/merge_request_templates/: Default.md  Refactoring.md
cicd/: DOCKER-CI-IMAGE.md  Dockerfile.ci
docs/: BUILD-AND-DEPLOYMENT.md  BUILD-CI-IMAGE.md  CI-DOCKER-IMAGE.md  INSECURE-FLAG-SECURITY.md  LINUX-BUILD-TROUBLESHOOTING.md  PHASE1-COMPLETION.md  PHASE2-COMPLETION.md  RELEASE-PROCESS.md  RFC-7030-IMPLEMENTATION-STATUS.md  RFC-COMPLIANCE-ROADMAP.md  RFC-COMPLIANCE-SUMMARY.md  SECURITY-AUDIT-ADDENDUM.md  SECURITY-AUDIT-REPORT.md  zensical-orig.toml  zensical.toml
docs/ato/: ATO-PACKAGE-COMPLETION-SUMMARY.md  CODE-COMMENT-IMPLEMENTATION-PLAN.md  CODE-TO-CONTROL-MAPPING.md  COMPLIANCE-SUMMARY.md  EXECUTIVE-SUMMARY.md  PHASE-12-SUMMARY.md  PRESENTATION.md  REFACTORING-SPRINT-COMPLETION.md  REFACTORING-SPRINT-PLAN.md  WEEK-4-COMPLETION.md  au-002-completion.md  code-signing-implementation.md  control-traceability-matrix.md  incident-response.md  penetration-test-cases.md  penetration-test-finding-template.md  penetration-testing-requirements.md  penetration-testing-rfp-template.md  penetration-testing.md  phase-13-1-completion.md  poam.md  sar.md  sc-001-completion.md  sc-001-implementation-plan.md  sc-002-completion.md  security-update-sla.md  si-001-completion.md  si-002-completion.md  siem-integration.md  ssp.md  stig-checklist.md  vulnerability-management.md
docs/dev/: ERROR-HANDLING-PATTERNS.md  GITLAB-CI-GUIDE.md  IMPLEMENTATION-GUIDE.md  PHASE2-HSM-ANALYSIS.md  RFC-QUICK-REFERENCE.md
docs/docs/: revocation-guide.md  security.md  windows-enrollment.md
examples/: auto_renewal.rs  autoenroll-config.toml  bootstrap.rs  channel_binding_enroll.rs  check_revocation.rs  cmc_advanced.rs  dod_enroll.rs  fips_enroll.rs  hsm_enroll.rs  metrics.rs  pkcs11_enroll.rs  reenroll.rs  simple_enroll.rs  validate_chain.rs
examples/config/: dod-hardened.toml  kiosk.toml  machine-cert.toml  server.toml  workstation.toml
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_parse_pem_certificates.rs  fuzz_parse_pem_private_key.rs  fuzz_parse_pkcs7.rs  fuzz_validate_csr.rs
integrations/arcsight/: est-client-connector.properties
integrations/elk/elasticsearch/: est-client-ilm-policy.json  est-client-template.json
integrations/elk/logstash/: est-client.conf
integrations/splunk/default/: app.conf  props.conf  savedsearches.conf  transforms.conf
sbom/: README.md  checksums.txt  usg-est-client-cyclonedx-1.5.json  usg-est-client-spdx-2.3.json
scripts/: Test-STIGCompliance.ps1  build-and-sign.ps1  build-ci-image.sh  verify-release.ps1  verify-release.sh
src/: bootstrap.rs  client.rs  config.rs  csr.rs  enveloped.rs  error.rs  lib.rs  logging.rs  renewal.rs  revocation.rs  tls.rs  validation.rs
src/auto_enroll/: config.rs  enrollment.rs  expand.rs  loader.rs  mod.rs
src/csr/: pkcs10.rs
src/dod/: cac.rs  mod.rs  policies.rs  roots.rs  validation.rs
src/fips/: algorithms.rs
src/hsm/: mod.rs  pkcs11.rs  software.rs
src/logging/: encryption.rs
src/metrics/: opentelemetry.rs  prometheus.rs
src/operations/: enroll.rs  serverkeygen.rs
src/siem/: cef.rs  leef.rs  mod.rs  syslog.rs
src/types/: csr_attrs.rs  mod.rs  pkcs7.rs
src/windows/: certstore.rs  cng.rs  credentials.rs  dpapi.rs  eventlog.rs  eventlog_layer.rs  identity.rs  mod.rs  perfcounter.rs  security.rs  service.rs  tpm.rs
tests/: integration_tests.rs  live_est_server_test.rs
tests/fixtures/: p256-key.pem  p256-pub.der
tests/integration/auth/: http_basic_test.rs  tls_client_cert_test.rs
tests/integration/errors/: network_test.rs  protocol_test.rs  retry_test.rs
tests/integration/operations/: enroll_test.rs  fullcmc_test.rs  reenroll_test.rs  serverkeygen_test.rs
tests/siem/: README.md  cef_tests.rs  leef_tests.rs  mod.rs  syslog_tests.rs
tests/windows/: README.md  cng_tests.rs  enrollment_cng_tests.rs  mod.rs
