[package]
name = "usg-est-client"
version = "1.0.3"
edition = "2024"
rust-version = "1.92"
license = "Apache-2.0"
description = "RFC 7030 compliant EST (Enrollment over Secure Transport) client"
keywords = ["est", "pki", "certificate", "enrollment", "rfc7030"]
categories = ["cryptography", "network-programming"]
repository = "https://github.com/192d-Wing/usg-est-client"
readme = "README.md"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ossl300)'] }

[dependencies]
# Async runtime
tokio = { version = "1.48", features = ["rt-multi-thread", "sync"] }
async-trait = "0.1.89"

# HTTP client (rustls is default, native-tls available as optional backend)
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }

# Native TLS backend (optional, for platform-specific TLS)
native-tls = { version = "0.2", optional = true }

# TLS
rustls = "0.23.35"
rustls-pki-types = { version = "1.13", features = ["alloc"] }
webpki-roots = "1.0"

# Cryptography - RustCrypto ecosystem
x509-cert = "0.2"
der = { version = "0.8.0", features = ["alloc", "pem"] }
cms = "0.2"
pkcs8 = { version = "0.10.2", features = ["encryption", "pem"] }
spki = "0.7.3"
const-oid = { version = "0.9", features = ["db"] }
sha2 = "0.10.9"
rsa = { version = "0.9", features = ["sha2"] }
p256 = { version = "0.13", features = ["ecdsa"] }
p384 = { version = "0.13", features = ["ecdsa"] }
signature = "2.2"
zeroize = { version = "1.8", features = ["alloc", "derive"] }

# CSR generation (optional feature)
rcgen = { version = "0.14", optional = true }

# Encoding
base64 = "0.22.1"

# Error handling
thiserror = "2.0.17"

# URL handling
url = "2.5.7"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", optional = true }

# Configuration file parsing (optional, for auto-enrollment)
toml = { version = "0.9", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
dirs = { version = "6.0", optional = true }
hostname = { version = "0.4", optional = true }

# Date/time handling (optional, for renewal feature)
time = { version = "0.3", optional = true, features = [
    "formatting",
    "parsing",
    "macros",
] }
chrono = { version = "0.4", optional = true }

# PKCS#11 support (optional, for HSM integration)
cryptoki = { version = "0.11", optional = true }
hex = { version = "0.4", optional = true }
uuid = { version = "1.19", features = ["v4"], optional = true }

# Metrics exporters (optional, for metrics feature)
prometheus = { version = "0.14", optional = true }
opentelemetry = { version = "0.31.0", optional = true, features = ["metrics"] }
opentelemetry-prometheus = { version = "0.31.0", optional = true }
opentelemetry_sdk = { version = "0.31.0", optional = true, features = [
    "metrics",
] }

# Symmetric encryption for EnvelopedData decryption (optional)
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }
des = { version = "0.8", optional = true }
aes-gcm = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }

# FIPS 140-2 compliance (optional, for DoD deployment)
openssl = { version = "0.10", optional = true, features = ["vendored"] }
openssl-sys = { version = "0.9", optional = true, features = ["vendored"] }

# CLI support (optional, for est-enroll binary)
clap = { version = "4.5", features = ["derive"], optional = true }

# Windows platform support (optional, Windows-only)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_Security_Credentials",
    "Win32_System_Registry",
    "Win32_System_Com",
    "Win32_System_Rpc",
    "Win32_System_Services",
    "Win32_Security",
    "Win32_System_Threading",
], optional = true }
windows-service = { version = "0.8", optional = true }

[dev-dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.22"
wiremock = "0.6.5"
tempfile = "3.24"
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "generate_fixtures"
path = "tests/fixtures/generate.rs"
required-features = ["csr-gen"]

[[example]]
name = "validate_chain"
required-features = ["validation"]

[[example]]
name = "metrics"
required-features = ["metrics"]

[[example]]
name = "pkcs11_enroll"
required-features = ["pkcs11", "csr-gen"]

[[example]]
name = "hsm_enroll"
required-features = ["hsm", "csr-gen"]

[[example]]
name = "auto_renewal"
required-features = ["renewal"]

[[example]]
name = "check_revocation"
required-features = ["revocation"]

[[example]]
name = "dod_enroll"
required-features = ["dod-pki", "csr-gen"]

[[example]]
name = "simple_enroll"
required-features = ["csr-gen"]

[[example]]
name = "cmc_advanced"
required-features = ["csr-gen"]

[[example]]
name = "reenroll"
required-features = ["csr-gen"]

[[bin]]
name = "est-autoenroll-service"
path = "src/bin/est-autoenroll-service.rs"
required-features = ["windows-service"]

[[bin]]
name = "est-service-install"
path = "src/bin/est-service-install.rs"
required-features = ["windows-service"]

[[bin]]
name = "est-enroll"
path = "src/bin/est-enroll.rs"
required-features = ["cli"]

[[bin]]
name = "est-migrate-keys"
path = "src/bin/est-migrate-keys.rs"
required-features = ["windows-service"]

[features]
default = ["csr-gen"]
csr-gen = ["rcgen"]
cli = ["clap", "auto-enroll", "tracing-subscriber"]
hsm = []
pkcs11 = ["hsm", "cryptoki", "hex", "uuid"]
renewal = ["time", "csr-gen"]
validation = []
metrics = []
metrics-prometheus = [
    "metrics",
    "prometheus",
    "opentelemetry",
    "opentelemetry-prometheus",
    "opentelemetry_sdk",
]
revocation = []
enveloped = ["aes", "cbc", "des", "aes-gcm", "hmac"]
auto-enroll = [
    "toml",
    "serde",
    "serde_json",
    "dirs",
    "hostname",
    "renewal",
    "csr-gen",
]
# SIEM integration (syslog forwarding, CEF, LEEF formats)
# Provides enterprise security monitoring integration
siem = ["serde", "serde_json", "chrono", "hostname"]

# Platform-specific TLS backends (alternative to default rustls)
# Use native-tls for OS-integrated TLS (SChannel on Windows, Security.framework on macOS, OpenSSL on Linux)
native-tls-backend = ["native-tls", "reqwest/native-tls"]
# Vendor OpenSSL for static linking on Linux (useful for musl/Alpine/Lambda deployments)
native-tls-vendored = ["native-tls-backend", "reqwest/native-tls-vendored"]

# Windows platform integration (certificate store, CNG, TPM)
# Note: Only compiles on Windows targets
windows = ["dep:windows", "auto-enroll"]

# Windows service support (includes windows feature)
# Note: Only compiles on Windows targets
windows-service = ["windows", "dep:windows-service", "tracing-subscriber"]

# FIPS 140-2 cryptographic compliance (for DoD ATO)
# Uses OpenSSL FIPS module instead of rustls for FIPS-validated cryptography
# Requires: OpenSSL 3.0+ with FIPS module installed and configured
fips = ["openssl", "openssl-sys", "native-tls-backend"]

# DoD PKI integration (DoD Root CAs, certificate policies, CAC/PIV support)
# Provides DoD-specific trust anchors and policy validation
dod-pki = []

# Full DoD deployment configuration (FIPS + DoD PKI)
# Use this for complete DoD ATO compliance
dod = ["fips", "dod-pki"]
